<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/bottom_btn1"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/btn_1"
        android:title="@string/explore" />
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/custom_ic_map"
        android:title="@string/map" />
    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/btn_favorite_2"
        android:title="@string/favorite" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/bottom_btn3"
        android:title="@string/title_profile" />

</menu>